fix: update pages

--- a/.aigne/web-smith/pages/workspace/en/home.yaml
+++ b/.aigne/web-smith/pages/workspace/en/home.yaml
@@ -1,117 +1,141 @@
 meta:
-  title: "AIGNE DocSmith | AI-Powered Documentation Generation"
-  description: "Generate comprehensive, multi-language documentation that understands your code. AIGNE DocSmith uses AI to keep your docs in sync, with zero config and seamless integration."
-  image: "mediakit://heroAigneDocsmith.png"
+  title: "AIGNE DocSmith - AI-Powered Documentation Generation"
+  description: "Automatically generate comprehensive, multi-language documentation from your codebase with AIGNE DocSmith. Intelligent, fast, and always in sync with your code."
 sections:
   - sectionName: "hero"
-    sectionSummary: "The hero section grabs attention with a powerful value proposition, vibrant visuals, and clear calls-to-action to encourage immediate engagement and exploration."
-    splitHeroTitle: "AI-Powered Documentation That Truly Understands Your Code"
-    splitHeroDescription: "Stop writing docs manually. AIGNE DocSmith analyzes your codebase to generate comprehensive, structured, and multi-language documentation that always stays in sync. It's magic!"
-    splitHeroActions:
+    sectionSummary: "A powerful hero section to introduce AIGNE DocSmith, immediately showcasing its core value proposition with an engaging visual and clear calls-to-action."
+    verticalHeroTitle: "AI-Powered Documentation That Understands Your Code"
+    verticalHeroImage: "mediakit://heroDocsmithAiVisualization.png"
+    verticalHeroActions:
       - text: "Get Started Now"
-        link: "#quick-start"
+        link: "https://github.com/AIGNE-io/aigne-doc-smith"
       - text: "View on GitHub"
         link: "https://github.com/AIGNE-io/aigne-doc-smith"
-    splitHeroRightImage: "mediakit://heroAigneDocsmith.png"
   - sectionName: "features"
-    sectionSummary: "This section showcases the core benefits of DocSmith in a fun, scannable grid. Each feature is presented with a clear icon and a punchy description to highlight the 'why' behind the 'what'."
-    threeColumnGridTitle: "Why You'll Love DocSmith"
+    sectionSummary: "A vibrant, four-column grid that highlights the key benefits of DocSmith. This section is designed for quick scanning, allowing users to instantly grasp the product's power and versatility."
+    fourColumnGridTitle: "Everything You Need to Automate Documentation"
     list:
-      - sectionName: "intelligentAnalysis"
-        sectionSummary: "Highlights the smart code analysis capability."
-        iconName: "mdi:brain-outline"
-        cardTitle: "Intelligent Analysis"
-        cardDescription: "Our AI doesn't just read your code—it understands its structure, patterns, and intent to create docs that make perfect sense."
-      - sectionName: "comprehensiveCoverage"
-        sectionSummary: "Showcases the tool's ability to generate a wide range of documentation."
-        iconName: "mdi:book-open-page-variant-outline"
-        cardTitle: "Comprehensive Coverage"
-        cardDescription: "From API references to full user guides, get everything you need. Your entire project, documented in one go!"
-      - sectionName: "globalReady"
-        sectionSummary: "Emphasizes the multi-language support."
-        iconName: "mdi:web"
-        cardTitle: "Global Ready"
-        cardDescription: "Go global instantly! With support for 12 languages and professional, context-aware translation, you can reach a worldwide audience."
-      - sectionName: "alwaysCurrent"
-        sectionSummary: "Focuses on the automatic update feature."
-        iconName: "mdi:sync-circle"
-        cardTitle: "Always Current"
-        cardDescription: "Forget stale docs. DocSmith detects your code changes and automatically updates your documentation, so it's always accurate."
-      - sectionName: "zeroConfig"
-        sectionSummary: "Highlights the ease of use and out-of-the-box functionality."
-        iconName: "mdi:rocket-launch-outline"
-        cardTitle: "Zero Config"
-        cardDescription: "Works right out of the box with smart defaults and auto-detection. You can literally generate your first set of docs in minutes!"
-      - sectionName: "seamlessIntegration"
-        sectionSummary: "Describes the tool's integration capabilities with other platforms and LLMs."
-        iconName: "mdi:puzzle-outline"
+      - sectionName: "featureAiGeneration"
+        sectionSummary: "Feature card highlighting the intelligent, AI-driven content generation capabilities."
+        iconName: "lucide:bot"
+        cardTitle: "Intelligent Generation"
+        cardDescription: "Our AI understands your code's structure and intent to create logical, comprehensive documentation that explains both the 'what' and the 'why'."
+      - sectionName: "featureMultiLanguage"
+        sectionSummary: "Feature card showcasing the extensive multi-language support, emphasizing global readiness."
+        iconName: "lucide:globe"
+        cardTitle: "Multi-Language Excellence"
+        cardDescription: "Reach a global audience with professional, context-aware translations in 12 languages, ensuring technical accuracy and consistency."
+      - sectionName: "featureIntegration"
+        sectionSummary: "Feature card detailing seamless integration with various LLMs and platforms."
+        iconName: "lucide:plug-zap"
         cardTitle: "Seamless Integration"
-        cardDescription: "Connect with AIGNE Hub, bring your own LLM keys, and publish with one click. It fits right into your workflow."
+        cardDescription: "Works with AIGNE Hub out-of-the-box or bring your own keys for OpenAI, Google, Claude, and more. Publish to any Discuss Kit instance."
+      - sectionName: "featureSmartUpdates"
+        sectionSummary: "Feature card explaining the automatic change detection and update functionality."
+        iconName: "lucide:git-pull-request-arrow"
+        cardTitle: "Always-Current Docs"
+        cardDescription: "Automatically detects code changes and intelligently updates only the relevant documentation, so your docs are never out of sync."
   - sectionName: "quickStart"
-    sectionSummary: "This section provides a super simple, action-oriented guide to get users started immediately. It's all about showing how fast and easy it is to see results."
-    verticalHeroTitle: "Get Started in Minutes"
-    verticalHeroDescription: "Ready to see the magic? Just install the CLI and run one command in your project directory. That's it! DocSmith handles the rest."
-    verticalHeroCode:
-      name: "Terminal"
-      content: "# Install the AIGNE CLI globally\nnpm install -g @aigne/cli\n\n# Navigate to your project and generate docs\naigne doc generate"
+    sectionSummary: "A clear, action-oriented guide to get developers started in three simple steps. Each step includes the necessary command to build confidence and encourage immediate adoption."
+    threeColumnGridTitle: "Get Started in Minutes"
+    list:
+      - sectionName: "stepInstall"
+        sectionSummary: "First step of the Quick Start guide: installing the AIGNE CLI."
+        cardTitle: "1. Install the CLI"
+        cardDescription: "Get started by installing the AIGNE CLI globally on your machine. All you need is Node.js v20+."
+        contentCardRightCode:
+          name: "Terminal"
+          content: "npm install -g @aigne/cli"
+      - sectionName: "stepNavigate"
+        sectionSummary: "Second step of the Quick Start guide: navigating to the user's project directory."
+        cardTitle: "2. Navigate to Your Project"
+        cardDescription: "Move into your project's root directory where your source code is located."
+        contentCardRightCode:
+          name: "Terminal"
+          content: "cd your-project-directory"
+      - sectionName: "stepGenerate"
+        sectionSummary: "Third and final step of the Quick Start guide: running the generate command."
+        cardTitle: "3. Generate Your Docs"
+        cardDescription: "Run a single command. DocSmith auto-detects your stack and guides you through a one-time setup."
+        contentCardRightCode:
+          name: "Terminal"
+          content: "aigne doc generate"
   - sectionName: "howItWorks"
-    sectionSummary: "This section gives a peek under the hood for the curious and technical-minded. It explains the multi-agent architecture in a visually engaging and easy-to-digest way."
-    splitHeroTitle: "How It Works: A Symphony of AI Agents"
-    splitHeroDescription: "DocSmith isn't just one AI—it's a coordinated team of specialized agents! Built on the AIGNE Framework, our multi-agent pipeline analyzes, plans, and generates content in stages, ensuring high-quality, structured documentation every time. It's like having a dedicated writing team at your command."
-    splitHeroLeftImage: "mediakit://howItWorksPipeline.png"
+    sectionSummary: "A visually-supported explanation of the advanced multi-agent architecture. This section builds technical credibility by showing the sophisticated pipeline behind the scenes."
+    splitHeroTitle: "How It Works: A Multi-Agent Pipeline"
+    splitHeroDescription: "DocSmith orchestrates a pipeline of specialized AI agents. From analyzing your codebase to planning structure, generating content, and translating, each agent handles a specific task, ensuring a modular and powerful workflow."
+    splitHeroRightImage: "mediakit://howItWorksPipelineDiagram.png"
     splitHeroActions:
-      - text: ""
-        link: ""
+      - text: "Explore the Architecture"
+        link: "https://docsmith.aigne.io/docs/"
       - text: ""
         link: ""
   - sectionName: "cliReference"
-    sectionSummary: "A handy, developer-focused reference for the most common CLI commands. Presented in a clean grid, it allows users to quickly find and copy the commands they need."
-    twoColumnGridTitle: "Master the Command Line"
+    sectionSummary: "A scannable reference of core CLI commands for technical users. This section acts as a practical mini-documentation, showcasing the tool's flexibility and power."
+    twoColumnGridTitle: "Powerful CLI Commands at Your Fingertips"
     list:
-      - sectionName: "generateCommand"
-        sectionSummary: "Explains the 'generate' command."
-        contentCardTitle: "Generate Documentation"
-        contentCardDescription: "The main event! Run this to kick off the entire process, from code analysis to content creation."
+      - sectionName: "commandGenerate"
+        sectionSummary: "Details for the 'aigne doc generate' command."
+        cardTitle: "generate"
+        cardDescription: "Analyzes your source code and generates a complete set of documentation based on your configuration."
         contentCardRightCode:
-          name: "CLI"
+          name: ""
           content: "aigne doc generate"
-      - sectionName: "updateCommand"
-        sectionSummary: "Explains the 'update' command."
-        contentCardTitle: "Update Specific Docs"
-        contentCardDescription: "Need to tweak something? This command lets you regenerate specific documents with new feedback."
+      - sectionName: "commandUpdate"
+        sectionSummary: "Details for the 'aigne doc update' command."
+        cardTitle: "update"
+        cardDescription: "Regenerates specific documents with targeted feedback, avoiding a full project rebuild."
         contentCardRightCode:
-          name: "CLI"
+          name: ""
           content: "aigne doc update"
-      - sectionName: "translateCommand"
-        sectionSummary: "Explains the 'translate' command."
-        contentCardTitle: "Translate to New Languages"
-        contentCardDescription: "Expand your reach. Easily translate your generated docs into any of the 12 supported languages."
+      - sectionName: "commandTranslate"
+        sectionSummary: "Details for the 'aigne doc translate' command."
+        cardTitle: "translate"
+        cardDescription: "Translates existing documentation into one or more of the 12 supported languages."
         contentCardRightCode:
-          name: "CLI"
+          name: ""
           content: "aigne doc translate"
-      - sectionName: "publishCommand"
-        sectionSummary: "Explains the 'publish' command."
-        contentCardTitle: "Publish & Share"
-        contentCardDescription: "Ready to go live? Publish your docs with a single command and get a shareable link instantly."
+      - sectionName: "commandPublish"
+        sectionSummary: "Details for the 'aigne doc publish' command."
+        cardTitle: "publish"
+        cardDescription: "Publishes your documentation to the AIGNE platform or a self-hosted instance and generates a shareable link."
         contentCardRightCode:
-          name: "CLI"
+          name: ""
           content: "aigne doc publish"
-  - sectionName: "enterprise"
-    sectionSummary: "This section speaks directly to business needs, highlighting the powerful features available for teams and enterprises. It builds confidence and provides a clear next step for serious inquiries."
-    splitHeroTitle: "Built for Teams & Enterprise"
-    splitHeroDescription: "Take your documentation to the next level with features designed for professional teams. Get team collaboration, custom branding, API integration, and priority support. Deploy on your own infrastructure for maximum security and control."
-    splitHeroActions:
-      - text: "Contact Sales"
-        link: "https://www.aigne.io/contact"
-      - text: ""
-        link: ""
-    splitHeroRightImage: "mediakit://enterpriseFeatures.png"
-  - sectionName: "communityCta"
-    sectionSummary: "A final, friendly invitation to join the conversation and become part of the AIGNE community. This section fosters connection and provides resources for support and updates."
-    ctaTitle: "Join Our Growing Community!"
-    ctaDescription: "Have questions, ideas, or just want to say hi? Connect with us and other developers. Get the latest updates, share your projects, and get support from the community."
+      - sectionName: "commandInit"
+        sectionSummary: "Details for the 'aigne doc init' command."
+        cardTitle: "init"
+        cardDescription: "Manually starts the interactive configuration wizard to set up or modify a project."
+        contentCardRightCode:
+          name: ""
+          content: "aigne doc init"
+      - sectionName: "commandPrefs"
+        sectionSummary: "Details for the 'aigne doc prefs' command."
+        cardTitle: "prefs"
+        cardDescription: "Displays the current configuration settings for your project in a read-only view."
+        contentCardRightCode:
+          name: ""
+          content: "aigne doc prefs"
+  - sectionName: "enterpriseAndCommunity"
+    sectionSummary: "A dedicated section to address both enterprise clients and community developers, providing clear next steps for each audience."
+    twoColumnGridTitle: "For Teams of All Sizes"
+    list:
+      - sectionName: "enterpriseFeatures"
+        sectionSummary: "Highlights the enterprise-grade features available for businesses."
+        contentCardTitle: "Built for Enterprise"
+        contentCardDescription: "Power your team with collaboration workflows, custom branding, API integration, and private cloud deployments. Get priority support and training to ensure your success."
+        contentCardBottomImage: "https://placehold.co/800x450?text=Enterprise+Solutions"
+      - sectionName: "communitySupport"
+        sectionSummary: "Invites users to join the growing community for support and collaboration."
+        contentCardTitle: "Join Our Community"
+        contentCardDescription: "Contribute on GitHub, ask questions in our community forum, or follow us on Twitter for the latest updates. We welcome developers of all backgrounds to help shape the future of DocSmith."
+        contentCardBottomImage: "https://placehold.co/800x450?text=Community+Hub"
+  - sectionName: "finalCta"
+    sectionSummary: "A final, high-impact call-to-action to drive conversions and encourage users to start using the product immediately."
+    ctaTitle: "Ready to Revolutionize Your Documentation?"
+    ctaDescription: "Stop writing docs by hand. Let AIGNE DocSmith do the heavy lifting so you can focus on what you do best: building amazing software."
     cta:
-      - text: "Follow on Twitter"
-        link: "https://twitter.com/arcblock_io"
-      - text: "Join the Discussion"
-        link: "https://community.arcblock.io/discussions/boards/aigne"
+      - text: "Generate Your First Doc"
+        link: "https://github.com/AIGNE-io/aigne-doc-smith"
+      - text: "Star on GitHub"
+        link: "https://github.com/AIGNE-io/aigne-doc-smith"
