--- a/.aigne/web-smith/pages/workspace/zh/home.yaml
+++ b/.aigne/web-smith/pages/workspace/zh/home.yaml
@@ -1,117 +1,141 @@
 meta:
-  title: "AIGNE DocSmith | AI 驱动的文档生成"
-  description: "生成能理解您代码的、全面的、多语言的文档。AIGNE DocSmith 使用 AI 保持您的文档同步，无需配置，无缝集成。"
-  image: "mediakit://heroAigneDocsmith.png"
+  title: "AIGNE DocSmith - AI 驱动的文档生成"
+  description: "使用 AIGNE DocSmith 从您的代码库自动生成全面的多语言文档。智能、快速，并始终与您的代码保持同步。"
 sections:
   - sectionName: "hero"
-    sectionSummary: "Hero 部分通过强有力的价值主张、生动的视觉效果和明确的行动号召来吸引注意力，鼓励用户立即参与和探索。"
-    splitHeroTitle: "真正理解您代码的 AI 驱动文档"
-    splitHeroDescription: "告别手动编写文档。AIGNE DocSmith 会分析您的代码库，生成全面、结构化、多语言的文档，并始终保持同步。就像魔法一样！"
-    splitHeroActions:
+    sectionSummary: "一个强大的英雄区域，用于介绍 AIGNE DocSmith，通过引人入胜的视觉效果和清晰的行动号召，立即展示其核心价值主张。"
+    verticalHeroTitle: "能够理解您代码的 AI 驱动文档"
+    verticalHeroImage: "mediakit://heroDocsmithAiVisualization.png"
+    verticalHeroActions:
       - text: "立即开始"
-        link: "#quick-start"
+        link: "https://github.com/AIGNE-io/aigne-doc-smith"
       - text: "在 GitHub 上查看"
         link: "https://github.com/AIGNE-io/aigne-doc-smith"
-    splitHeroRightImage: "mediakit://heroAigneDocsmith.png"
   - sectionName: "features"
-    sectionSummary: "本部分通过一个有趣的、可快速浏览的网格展示了 DocSmith 的核心优势。每个功能都配有清晰的图标和精炼的描述，以突出其'价值'而非仅仅是'功能'。"
-    threeColumnGridTitle: "爱上 DocSmith 的理由"
+    sectionSummary: "一个生动的四列网格，突出展示 DocSmith 的主要优势。该部分设计用于快速浏览，让用户能即刻了解产品的强大功能和多功能性。"
+    fourColumnGridTitle: "自动化文档所需的一切"
     list:
-      - sectionName: "intelligentAnalysis"
-        sectionSummary: "突出智能代码分析能力。"
-        iconName: "mdi:brain-outline"
-        cardTitle: "智能分析"
-        cardDescription: "我们的 AI 不仅仅是阅读您的代码——它能理解其结构、模式和意图，从而创建出完全合理的文档。"
-      - sectionName: "comprehensiveCoverage"
-        sectionSummary: "展示该工具生成各种文档的能力。"
-        iconName: "mdi:book-open-page-variant-outline"
-        cardTitle: "全面覆盖"
-        cardDescription: "从 API 参考到完整的用户指南，您需要的一切应有尽有。一次性为您的整个项目生成文档！"
-      - sectionName: "globalReady"
-        sectionSummary: "强调多语言支持。"
-        iconName: "mdi:web"
-        cardTitle: "全球化就绪"
-        cardDescription: "即刻走向全球！支持 12 种语言和专业的、感知上下文的翻译，助您触达全球用户。"
-      - sectionName: "alwaysCurrent"
-        sectionSummary: "重点介绍自动更新功能。"
-        iconName: "mdi:sync-circle"
-        cardTitle: "始终最新"
-        cardDescription: "告别过时的文档。DocSmith 会检测您的代码变更并自动更新文档，确保内容始终准确。"
-      - sectionName: "zeroConfig"
-        sectionSummary: "突出易用性和开箱即用的功能。"
-        iconName: "mdi:rocket-launch-outline"
-        cardTitle: "零配置"
-        cardDescription: "开箱即用，具备智能默认设置和自动检测功能。您可以在几分钟内生成第一套文档！"
-      - sectionName: "seamlessIntegration"
-        sectionSummary: "描述该工具与其他平台和 LLM 的集成能力。"
-        iconName: "mdi:puzzle-outline"
+      - sectionName: "featureAiGeneration"
+        sectionSummary: "突出智能、AI 驱动内容生成功能的特性卡片。"
+        iconName: "lucide:bot"
+        cardTitle: "智能生成"
+        cardDescription: "我们的 AI 能理解您代码的结构和意图，从而创建出合乎逻辑、内容全面的文档，解释“是什么”和“为什么”。"
+      - sectionName: "featureMultiLanguage"
+        sectionSummary: "展示广泛多语言支持的特性卡片，强调全球化准备就绪。"
+        iconName: "lucide:globe"
+        cardTitle: "卓越的多语言支持"
+        cardDescription: "通过 12 种语言的专业、上下文感知翻译触达全球受众，确保技术准确性和一致性。"
+      - sectionName: "featureIntegration"
+        sectionSummary: "详细介绍与各种 LLM 和平台无缝集成的特性卡片。"
+        iconName: "lucide:plug-zap"
         cardTitle: "无缝集成"
-        cardDescription: "连接 AIGNE Hub，使用您自己的 LLM 密钥，一键发布。完美融入您的工作流。"
+        cardDescription: "开箱即用 AIGNE Hub，或自带 OpenAI、Google、Claude 等平台的密钥。可发布到任何 Discuss Kit 实例。"
+      - sectionName: "featureSmartUpdates"
+        sectionSummary: "解释自动变更检测和更新功能的特性卡片。"
+        iconName: "lucide:git-pull-request-arrow"
+        cardTitle: "文档始终保持最新"
+        cardDescription: "自动检测代码变更，并智能地仅更新相关文档，确保您的文档永远不会过时。"
   - sectionName: "quickStart"
-    sectionSummary: "本部分提供了一个极其简单、以行动为导向的指南，帮助用户立即上手。重点在于展示看到结果是多么快速和容易。"
-    verticalHeroTitle: "几分钟内快速上手"
-    verticalHeroDescription: "准备好见证魔法了吗？只需安装 CLI 并在您的项目目录中运行一个命令。就是这么简单！剩下的交给 DocSmith。"
-    verticalHeroCode:
-      name: "终端"
-      content: "# 全局安装 AIGNE CLI\nnpm install -g @aigne/cli\n\n# 进入您的项目并生成文档\naigne doc generate"
+    sectionSummary: "一个清晰、面向行动的指南，帮助开发者通过三个简单步骤快速入门。每个步骤都包含必要的命令，以建立信心并鼓励立即采用。"
+    threeColumnGridTitle: "几分钟内快速入门"
+    list:
+      - sectionName: "stepInstall"
+        sectionSummary: "快速入门指南的第一步：安装 AIGNE CLI。"
+        cardTitle: "1. 安装 CLI"
+        cardDescription: "首先在您的机器上全局安装 AIGNE CLI。您只需要 Node.js v20+ 版本。"
+        contentCardRightCode:
+          name: "终端"
+          content: "npm install -g @aigne/cli"
+      - sectionName: "stepNavigate"
+        sectionSummary: "快速入门指南的第二步：导航到用户的项目目录。"
+        cardTitle: "2. 导航到您的项目"
+        cardDescription: "进入您项目源代码所在的根目录。"
+        contentCardRightCode:
+          name: "终端"
+          content: "cd your-project-directory"
+      - sectionName: "stepGenerate"
+        sectionSummary: "快速入门指南的第三步也是最后一步：运行生成命令。"
+        cardTitle: "3. 生成您的文档"
+        cardDescription: "运行一个命令。DocSmith 会自动检测您的技术栈，并引导您完成一次性设置。"
+        contentCardRightCode:
+          name: "终端"
+          content: "aigne doc generate"
   - sectionName: "howItWorks"
-    sectionSummary: "本部分为好奇和技术导向的用户揭示了其内部工作原理。它以视觉上引人入胜且易于理解的方式解释了多智能体架构。"
-    splitHeroTitle: "工作原理：AI 智能体的交响乐"
-    splitHeroDescription: "DocSmith 不只是一个 AI——它是一个由专业智能体组成的协作团队！基于 AIGNE 框架构建，我们的多智能体流水线分阶段进行分析、规划和内容生成，确保每次都能产出高质量、结构化的文档。就像您拥有一个专属的写作团队。"
-    splitHeroLeftImage: "mediakit://howItWorksPipeline.png"
+    sectionSummary: "一个带有视觉辅助的先进多代理架构解释。该部分通过展示幕后复杂的流程来建立技术可信度。"
+    splitHeroTitle: "工作原理：一个多代理管道"
+    splitHeroDescription: "DocSmith 协调一个由专业 AI 代理组成的管道。从分析您的代码库到规划结构、生成内容和翻译，每个代理都处理特定任务，确保了模块化且强大的工作流程。"
+    splitHeroRightImage: "mediakit://howItWorksPipelineDiagram.png"
     splitHeroActions:
-      - text: ""
-        link: ""
+      - text: "探索架构"
+        link: "https://docsmith.aigne.io/docs/"
       - text: ""
         link: ""
   - sectionName: "cliReference"
-    sectionSummary: "一个面向开发者的实用参考，列出了最常见的 CLI 命令。以简洁的网格形式呈现，方便用户快速查找和复制所需命令。"
-    twoColumnGridTitle: "掌握命令行"
+    sectionSummary: "为技术用户提供的一个可快速浏览的核心 CLI 命令参考。该部分作为一个实用的迷你文档，展示了工具的灵活性和强大功能。"
+    twoColumnGridTitle: "强大的 CLI 命令触手可及"
     list:
-      - sectionName: "generateCommand"
-        sectionSummary: "解释 'generate' 命令。"
-        contentCardTitle: "生成文档"
-        contentCardDescription: "核心功能！运行此命令以启动从代码分析到内容创建的整个过程。"
+      - sectionName: "commandGenerate"
+        sectionSummary: "'aigne doc generate' 命令的详细信息。"
+        cardTitle: "generate"
+        cardDescription: "分析您的源代码，并根据您的配置生成一整套文档。"
         contentCardRightCode:
-          name: "CLI"
+          name: ""
           content: "aigne doc generate"
-      - sectionName: "updateCommand"
-        sectionSummary: "解释 'update' 命令。"
-        contentCardTitle: "更新指定文档"
-        contentCardDescription: "需要调整某些内容？此命令允许您根据新的反馈重新生成特定文档。"
+      - sectionName: "commandUpdate"
+        sectionSummary: "'aigne doc update' 命令的详细信息。"
+        cardTitle: "update"
+        cardDescription: "根据有针对性的反馈重新生成特定文档，避免完整的项目重建。"
         contentCardRightCode:
-          name: "CLI"
+          name: ""
           content: "aigne doc update"
-      - sectionName: "translateCommand"
-        sectionSummary: "解释 'translate' 命令。"
-        contentCardTitle: "翻译成新语言"
-        contentCardDescription: "扩大您的影响力。轻松将您生成的文档翻译成 12 种支持的语言中的任意一种。"
+      - sectionName: "commandTranslate"
+        sectionSummary: "'aigne doc translate' 命令的详细信息。"
+        cardTitle: "translate"
+        cardDescription: "将现有文档翻译成 12 种支持的语言中的一种或多种。"
         contentCardRightCode:
-          name: "CLI"
+          name: ""
           content: "aigne doc translate"
-      - sectionName: "publishCommand"
-        sectionSummary: "解释 'publish' 命令。"
-        contentCardTitle: "发布与分享"
-        contentCardDescription: "准备好上线了吗？使用一个命令发布您的文档，并立即获得一个可分享的链接。"
+      - sectionName: "commandPublish"
+        sectionSummary: "'aigne doc publish' 命令的详细信息。"
+        cardTitle: "publish"
+        cardDescription: "将您的文档发布到 AIGNE 平台或自托管实例，并生成一个可分享的链接。"
         contentCardRightCode:
-          name: "CLI"
+          name: ""
           content: "aigne doc publish"
-  - sectionName: "enterprise"
-    sectionSummary: "本部分直接面向业务需求，重点介绍了为团队和企业提供的强大功能。它旨在建立信任，并为有价值的咨询提供明确的下一步。"
-    splitHeroTitle: "专为团队和企业打造"
-    splitHeroDescription: "通过专为专业团队设计的功能，将您的文档提升到新水平。获得团队协作、自定义品牌、API 集成和优先支持。可部署在您自己的基础设施上，以实现最大程度的安全和控制。"
-    splitHeroActions:
-      - text: "联系销售"
-        link: "https://www.aigne.io/contact"
-      - text: ""
-        link: ""
-    splitHeroRightImage: "mediakit://enterpriseFeatures.png"
-  - sectionName: "communityCta"
-    sectionSummary: "最后，友好地邀请用户加入对话，成为 AIGNE 社区的一员。本部分旨在促进联系，并为支持和更新提供资源。"
-    ctaTitle: "加入我们不断壮大的社区！"
-    ctaDescription: "有任何问题、想法，或者只是想打个招呼？快来与我们以及其他开发者建立联系。获取最新动态，分享您的项目，并从社区获得支持。"
+      - sectionName: "commandInit"
+        sectionSummary: "'aigne doc init' 命令的详细信息。"
+        cardTitle: "init"
+        cardDescription: "手动启动交互式配置向导来设置或修改项目。"
+        contentCardRightCode:
+          name: ""
+          content: "aigne doc init"
+      - sectionName: "commandPrefs"
+        sectionSummary: "'aigne doc prefs' 命令的详细信息。"
+        cardTitle: "prefs"
+        cardDescription: "以只读视图显示您项目的当前配置设置。"
+        contentCardRightCode:
+          name: ""
+          content: "aigne doc prefs"
+  - sectionName: "enterpriseAndCommunity"
+    sectionSummary: "一个专门面向企业客户和社区开发者的部分，为每个受众提供清晰的后续步骤。"
+    twoColumnGridTitle: "适用于各种规模的团队"
+    list:
+      - sectionName: "enterpriseFeatures"
+        sectionSummary: "突出展示为企业提供的企业级功能。"
+        contentCardTitle: "为企业而构建"
+        contentCardDescription: "通过协作工作流、自定义品牌、API 集成和私有云部署为您的团队赋能。获得优先支持和培训，确保您的成功。"
+        contentCardBottomImage: "https://placehold.co/800x450?text=Enterprise+Solutions"
+      - sectionName: "communitySupport"
+        sectionSummary: "邀请用户加入不断壮大的社区以获得支持与协作。"
+        contentCardTitle: "加入我们的社区"
+        contentCardDescription: "在 GitHub 上贡献、在我们的社区论坛中提问，或在 Twitter 上关注我们以获取最新动态。我们欢迎各种背景的开发者帮助塑造 DocSmith 的未来。"
+        contentCardBottomImage: "https://placehold.co/800x450?text=Community+Hub"
+  - sectionName: "finalCta"
+    sectionSummary: "一个最后的、高影响力的行动号召，旨在推动转化并鼓励用户立即开始使用产品。"
+    ctaTitle: "准备好革新您的文档了吗？"
+    ctaDescription: "停止手动编写文档。让 AIGNE DocSmith 来处理繁重的工作，这样您就可以专注于自己最擅长的事情：构建卓越的软件。"
     cta:
-      - text: "在 Twitter 上关注"
-        link: "https://twitter.com/arcblock_io"
-      - text: "加入讨论"
-        link: "https://community.arcblock.io/discussions/boards/aigne"
+      - text: "生成您的第一份文档"
+        link: "https://github.com/AIGNE-io/aigne-doc-smith"
+      - text: "在 GitHub 上加星"
+        link: "https://github.com/AIGNE-io/aigne-doc-smith"
