--- a/agents/update/update-document-detail.yaml
+++ b/agents/update/update-document-detail.yaml
@@ -50,3 +50,7 @@ output_schema:
       description: Summary of the operations performed on the document content
 skills:
   - ./document-tools/update-document-content.mjs
+  - ./fs-tools/glob.mjs
+  - ./fs-tools/grep.mjs
+  - ./fs-tools/read-file.mjs
+task_render_mode: collapse
