chore: add d2-diagram generate constraint

--- a/agents/update/generate-document.yaml
+++ b/agents/update/generate-document.yaml
@@ -56,7 +56,7 @@ skills:
       is_approved: isValid
       max_iterations: 5
       return_last_on_max_iterations: false
-      custom_error_message: "Don't generate D2 diagram due to failed valid on max iterations."
+      custom_error_message: "MUST NOT generate any diagram: validation failed after max iterations."
     input_schema:
       type: object
       properties:
