--- a/agents/generate/draw-diagram.yaml
+++ b/agents/generate/draw-diagram.yaml
@@ -1,4 +1,4 @@
-name: drawD2Diagram
+name: drawDiagram
 description: Generate a D2 diagram from document content.
 instructions:
   - role: system
@@ -10,7 +10,7 @@ input_schema:
   properties:
     documentContent:
       type: string
-      description: Source code of current document (without the D2 diagram)
+      description: Source code of current document (without diagram content)
   required:
     - documentContent
 output_schema:
