--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "dompurify": "^3.2.6",
     "fs-extra": "^11.3.1",
     "glob": "^11.0.3",
+    "isbinaryfile": "^5.0.6",
     "jsdom": "^26.1.0",
     "marked": "^15.0.12",
     "marked-terminal": "^7.3.0",
