--- a/agents/generate/draw-diagram.yaml
+++ b/agents/generate/draw-diagram.yaml
@@ -10,14 +10,18 @@ input_schema:
   properties:
     documentContent:
       type: string
-      description: Source code of current document (without diagram content)
+      description: |
+        当前文档的**原始文本内容**。模型应根据这个文档中包含的**流程、结构、概念或关系**，生成相应的 D2 图表。
+        **注意：** 此内容是原始文档，**不包含**任何已有的图表源代码。
   required:
     - documentContent
 output_schema:
   type: object
   properties:
-    d2DiagramSourceCode:
+    d2SourceCode:
       type: string
-      description: Source code to draw D2 diagram
+      description: |
+        根据输入文本内容生成的 **D2 图表源代码**。
+        **重要：** 返回的内容必须是**完整的、可直接渲染的 D2 格式**，例如，用于表示流程图、架构图或实体关系图等。
   required:
-    - d2DiagramSourceCode
+    - d2SourceCode
