--- a/agents/generate/generate-structure.yaml
+++ b/agents/generate/generate-structure.yaml
@@ -1,7 +1,10 @@
 name: generateStructure
 description: Generate the structure and organization of your documentation
 instructions:
-  url: ../../prompts/structure/generate-structure-system.md
+  - role: system
+    url: ../../prompts/structure/generate/system.md
+  - role: user
+    url: ../../prompts/structure/generate/user.md
 input_schema:
   type: object
   properties:
