--- a/agents/update/generate-document.yaml
+++ b/agents/update/generate-document.yaml
@@ -63,16 +63,12 @@ skills:
       properties:
         documentContent:
           type: string
-          description: |
-            当前文档的**原始文本内容**。模型应根据这个文档中包含的**流程、结构、概念或关系**，生成相应的 D2 图表。
-            **注意：** 此内容是原始文档，**不包含**任何已有的图表源代码。
+          description: The **raw text content** of the current document. (**Note:** This is the original document and **does not include** any existing diagram source code.)
       required:
         - documentContent
     output_schema:
       type: object
       properties:
-        d2SourceCode:
+        diagramSourceCode:
           type: string
-          description: |
-            根据输入文本内容生成的 **D2 图表源代码**。
-            **重要：** 返回的内容必须是**完整的、可直接渲染的 D2 格式**，例如，用于表示流程图、架构图或实体关系图等。
+          description: The **diagram source code** generated from the input text.
