--- a/agents/update/generate-document.yaml
+++ b/agents/update/generate-document.yaml
@@ -1,7 +1,10 @@
 name: generateDocument
 description: Comprehensive content generator for documentation that creates detailed, high-quality document content from various data sources with intelligent analysis.
 instructions:
-  url: ../../prompts/detail/generate-document.md
+  - role: system
+    url: ../../prompts/detail/document/system-prompt.md
+  - role: user
+    url: ../../prompts/detail/document/user-prompt.md
 input_schema:
   type: object
   properties:
