--- a/agents/generate/generate-structure.yaml
+++ b/agents/generate/generate-structure.yaml
@@ -5,6 +5,8 @@ instructions:
     url: ../../prompts/structure/generate/system.md
   - role: user
     url: ../../prompts/structure/generate/user.md
+skills:
+  - ./document-structure-tools/generate-sub-structure.mjs
 input_schema:
   type: object
   properties:
